ART 2.3
* Added database type drop down field to help populate common jdbc details
* Allow username and password field values to be used for CUBRID database
* Allow blank passwords for datasources
* Updated quartz to 2.1.5

ART 2.2.1
* Added support for the CUBRID database (www.cubrid.org)
* Fix to remove warning when precompiling some jsp files
* Fix for dashboard description not showing on start page
* Remove need to specify _GRAPH_ID parameter for direct execution of graphs
* Fix to allow graphs to work with QUERY_ID or queryId parameters (thanks to yidong123)
* Fix for dashboards not working on chrome (thanks to yidong123)
* Fix for rule value ALL_ITEMS not working properly (thanks to yidong123)
* Fixed issue with charts not displaying first time on dashboards
* Fixed some missing localization messages
* Improved handling of numeric multi parameter values

ART 2.2
* Fixed graph tooltips not showing up on Firefox 9
* Included clean and compile jasperreports targets in build.xml to enable recompilation of .jrxml files if jasperreports version changes
* Added servlet-api.jar to the package so that modifications to build.xml not necessary to recompile code
* Automatically compile subreports contained in jasper reports
* Use bcrypt for password hashing
* Allow deleting of multiple queries
* Allow query security to be based on both groups and queries
* Use slf4j and art_logs table for all logging instead of logging some information to separate log directory
* Allow show parameters option for graphs
* Order parameters displayed in a report according to field position when show parameters is used
* Support for display of parameters in job output
* Allow LOVs to use static values
* Allow query to show parameters by default
* Added swahili translation
* Improved support for postgresql 8.1
* Fixed alerts not working
* Fixed datasource not saved when using default repository and test sql longer than 20 characters
* Updated slf4j to 1.6.4
* Updated javamail to 1.4.4